--- a/01-vagrant/Vagrantfile
+++ b/01-vagrant/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "debian9"
+  config.vm.box = "generic/debian9"
 
   config.vm.provider "virtualbox" do |vb|
     vb.name = "debian9"
