--- a/01-vagrant/Vagrantfile
+++ b/01-vagrant/Vagrantfile
@@ -1,5 +1,5 @@
 Vagrant.configure("2") do |config|
-  config.vm.box = "maxsh-CentOS"
+  config.vm.box = "maxsh/CentOS"
   config.vm.hostname = "centos8"
   config.vm.define "centos"
   config.vm.provider "virtualbox" do |vb|
