--- a/02-lxc/Vagrantfile
+++ b/02-lxc/Vagrantfile
@@ -24,22 +24,23 @@ Vagrant.configure("2") do |config|
       lxc-create -n php -t download -- -d centos -r 9-Stream -a amd64
       lxc-autostart
       #  create services in lxc
-      lxc-attach -n html -- dnf update
-      lxc-attach -n html -- dnf install -y httpd
+      sleep 20
+      lxc-attach -n html -- yum update
+      lxc-attach -n html -- yum install -y httpd
       lxc-attach -n php -- yum update
       lxc-attach -n php -- yum install -y httpd php php-fpm
       #  create index files in lxc
-      # lxc-attach html -- curl https://raw.githubusercontent.com/Fenikks/devops-files/master/02-tools/files/index.html -o /etc/httpd/conf.d/welcome.conf
-      # lxc-attach php -- curl https://raw.githubusercontent.com/Fenikks/devops-files/master/02-tools/files/index.php -o /var/www/html/index.php
+      lxc-attach html -- curl https://raw.githubusercontent.com/maxmax03/devops-hometasks/main/02-lxc/index.html -o /var/www/html/index.html
+      lxc-attach php -- curl https://raw.githubusercontent.com/maxmax03/devops-hometasks/main/02-lxc/index.php -o /var/www/html/index.php
       #  forwording ports localhost
-      # GET_CONTAINER_IP=$(sudo lxc-info -i html | awk '{print $2}')
-      # iptables -t nat -A PREROUTING -p tcp -i eth0 --dport 80 -j DNAT --to-destination $GET_CONTAINER_IP:80
+      GET_CONTAINER_IP_HTML=$(sudo lxc-info -i html | awk '{print $2}')
+      iptables -t nat -A PREROUTING -p tcp -i eth0 --dport 80 -j DNAT --to-destination $GET_CONTAINER_IP_HTML:80
+      GET_CONTAINER_IP_PHP=$(sudo lxc-info -i php | awk '{print $2}')
+      iptables -t nat -A PREROUTING -p tcp -i eth0 --dport 80 -j DNAT --to-destination $GET_CONTAINER_IP_PHP:80
       #  restart services
-      # lxc-attach html -- systemctl enable httpd
-      # lxc-attach html -- systemctl restart httpd
-      # systemctl restart lxc-net
-      
-      
-      # lxc-attach html -- systemctl start httpd
+      lxc-attach html -- systemctl enable httpd
+      lxc-attach html -- systemctl restart httpd
+      lxc-attach php -- systemctl enable httpd
+      lxc-attach php -- systemctl restart httpd
   SHELL
 end
