--- a/04-puppet/Vagrantfile
+++ b/04-puppet/Vagrantfile
@@ -1,49 +1,61 @@
 Vagrant.configure("2") do |config|
-    config.vm.box = "generic/centos8s"
-  
-    config.vm.provider "virtualbox" do |vb|
-      vb.memory = 1024
-      vb.cpus   = 1
-    end
+  config.vm.box = "generic/centos8s"
 
-    config.vm.define "slave1.puppet" do |slave|
-    config.vm.hostname = "slave1"
-      slave.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
-      slave.vm.network "private_network", ip: "192.168.50.2"
-      slave.vm.hostname = "slave1.puppet"
+  config.vm.provider "virtualbox" do |vb|
+    vb.memory = 2048
+    vb.cpus   = 1
+  end
+
+  config.vm.define "slave1.puppet" do |slave|
+  config.vm.hostname = "slave1"
+    slave.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
+    slave.vm.network "private_network", ip: "192.168.50.2"
+    slave.vm.hostname = "slave1.puppet"
+
+    slave.vm.provision "ansible_local" do |ansible|
+      ansible.playbook = "playbook.yaml"
+      ansible.inventory_path = "inventory"
+      ansible.become = true
+    end                
+  end
   
+  config.vm.define "slave2.puppet" do |slave|
+  config.vm.hostname = "slave2"
+    slave.vm.network "forwarded_port", guest: 80, host: 8081, host_ip: "127.0.0.1"
+    slave.vm.network "private_network", ip: "192.168.50.3"   
+    slave.vm.hostname = "slave2.puppet"
+    
+    slave.vm.provision "ansible_local" do |ansible|
+      ansible.playbook = "playbook.yaml"
+      ansible.inventory_path = "inventory"
+      ansible.become = true
+    end                
+  end
+
+  config.vm.define "mineserver.puppet" do |slave|
+    config.vm.hostname = "mineserver"
+      slave.vm.network "private_network", ip: "192.168.50.4"   
+      slave.vm.hostname = "mineserver.puppet"
+        
       slave.vm.provision "ansible_local" do |ansible|
         ansible.playbook = "playbook.yaml"
         ansible.inventory_path = "inventory"
         ansible.become = true
       end                
     end
-    
-    config.vm.define "slave2.puppet" do |slave|
-    config.vm.hostname = "slave2"
-      slave.vm.network "forwarded_port", guest: 80, host: 8081, host_ip: "127.0.0.1"
-      slave.vm.network "private_network", ip: "192.168.50.3"   
-      slave.vm.hostname = "slave2.puppet"
-      
-      slave.vm.provision "ansible_local" do |ansible|
-        ansible.playbook = "playbook.yaml"
-        ansible.inventory_path = "inventory"
-        ansible.become = true
-      end                
-    end
 
-    config.vm.define "master.puppet", primary: true do |master|
-      config.vm.hostname = "master"
-      config.vm.synced_folder  ".", "/vagrant", disabled: false
-        master.vm.network "private_network", ip: "192.168.50.1"
-        master.vm.hostname = "master.puppet"
+  config.vm.define "master.puppet", primary: true do |master|
+  config.vm.hostname = "master"
+  config.vm.synced_folder  ".", "/vagrant", disabled: false
+    master.vm.network "private_network", ip: "192.168.50.1"
+    master.vm.hostname = "master.puppet"
+
+    master.vm.provider("virtualbox") { |vb| vb.memory = 1024 }
   
-        master.vm.provider("virtualbox") { |vb| vb.memory = 1024 }
-    
-        master.vm.provision "ansible_local" do |ansible|
-          ansible.playbook = "playbook.yaml"
-          ansible.inventory_path = "inventory"
-          ansible.become = true
-        end            
-    end
+    master.vm.provision "ansible_local" do |ansible|
+      ansible.playbook = "playbook.yaml"
+      ansible.inventory_path = "inventory"
+      ansible.become = true
+    end            
+  end 
 end
