--- a/04-puppet/playbook.yaml
+++ b/04-puppet/playbook.yaml
@@ -30,6 +30,7 @@
         autosign = true
 
         [agent]
+        environment = minecraft
         server = master.puppet
         runinterval = 1m
 
@@ -74,6 +75,7 @@
     file: 
       path: /etc/puppetlabs/r10k
       state: directory
+      mode: '0775'
 
   - name: Conf r10k
     copy:
@@ -166,6 +168,51 @@
     lineinfile: 
       path: /etc/hosts
       line: 192.168.50.1 master.puppet
+
+  - name: Start puppet-agent
+    service:
+      name: puppet
+      state: started
+      enabled: true
+
+  - name: Stop and disable firewalld
+    service:
+      name: firewalld
+      state: stopped
+      enabled: false
+
+
+
+- name: Minecraft provision
+  hosts: mineserver.puppet
+  
+  tasks:
+  - rpm_key:
+      state: present
+      key: https://yum.puppet.com/RPM-GPG-KEY-puppet-20250406
+
+  - name: rpm
+    yum:
+      name: https://yum.puppetlabs.com/puppet-release-el-8.noarch.rpm 
+
+  - name: Install agent
+    yum:
+      name: puppet-agent    
+      state: present
+
+  - name: Add [agent] puppet.conf
+    blockinfile: 
+      path: /etc/puppetlabs/puppet/puppet.conf 
+      block: |
+        [agent]
+        server = master.puppet
+        runinterval = 1m
+
+  - name: Add masterhost
+    blockinfile:
+      path: /etc/hosts
+      block: |
+        192.168.50.1 master.puppet
 
   - name: Start puppet-agent
     service:
