--- a/09-docker/Dockerfile.multi
+++ b/09-docker/Dockerfile.multi
@@ -1,11 +1,10 @@
 FROM golang:1.16 as app
-RUN mkdir /wcg && \
-    cd /wcg && \
-    git clone https://github.com/Fenikks/word-cloud-generator.git && \
-    make
-CMD /wcg/artifacts/linux/word-cloud-generator
+
+RUN git clone https://github.com/Fenikks/word-cloud-generator.git
+WORKDIR /go/word-cloud-generator 
+RUN CGO_ENABLED=0 GOOS=linux go build -a -installsuffix cgo -o /go/artifacts/word-cloud-generator
 
 FROM alpine:latest
 RUN apk add gcompat
-COPY --from=app /wcg/artifacts/linux/word-cloud-generator .
+COPY --from=app /go/artifacts/word-cloud-generator .
 CMD /word-cloud-generator
