--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -1,1 +1,13 @@
+name: GitHub lab CI
 
+on: 
+   workflow_dispatch:
+   
+jobs:
+  build:
+    runs-on: ubuntu-20.04
+    
+    steps:
+     - uses: actions/checkout@v3
+     - name: Test step
+       run: "echo 'Hello from bottom'"
