--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -10,4 +10,4 @@ jobs:
     steps:
      - uses: actions/checkout@v3
      - name: Docker image
-     - run: docker build . --file Dockerfile.multi --tag my-image-name:wcg
+       run: docker build . --file Dockerfile.multi --tag my-image-name:wcg
