--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -18,3 +18,7 @@ jobs:
         registry: ghcr.io
         username: ${{ github.actor }}
         password: ${{ secrets.ACTION_TOKEN }}
+
+    - name: Docker push
+      run: |
+        docker push ghcr.io/${{ github.repository }}:latest
