--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -11,3 +11,14 @@ jobs:
      - uses: actions/checkout@v3
      - name: Docker image
        run: docker build . --file Dockerfile.multi --tag my-image-name:wcg
+
+     - name: Login GitHub
+       uses: docker/login-action@v1
+       with:
+         registry: ghcr.io
+         username: ${{ github.actor }}
+         password: ${{ secrets.ACTION_TOKEN }}
+        
+     - name: Docker push
+       run: |
+         docker push ghcr.io/${{ github.repository }}:latest
