--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -1,7 +1,8 @@
 name: GitHub lab CI
 
 on: 
-   workflow_dispatch:
+  push:
+  workflow_dispatch:
    
 jobs:
   build:
@@ -10,7 +11,10 @@ jobs:
     steps:
      - uses: actions/checkout@v3
      - name: Docker image
-       run: docker build . --file Dockerfile.multi --tag my-image-name:wcg
+       run: |
+         docker build . --file Dockerfile.multi --tag my-image-name:wcg
+         echo github.actor : ${{ github.actor }}
+         
        
      - name: Login GitHub
        uses: docker/login-action@v1
