--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -14,13 +14,13 @@ jobs:
        run: |
          docker build . --file Dockerfile.multi --tag my-image-name:wcg
          echo github.actor : ${{ github.actor }}
+         echo github.repository : ${{ github.repository }}
          
-       
      - name: Login GitHub
        uses: docker/login-action@v1
        with:
          registry: ghcr.io
-         username: ${{ secrets.USERNAME_TOKEN }}
+         username: ${{ secrets.github.actor }}
          password: ${{ secrets.ACTION_TOKEN }}
         
      - name: Docker push
