--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -20,7 +20,7 @@ jobs:
        uses: docker/login-action@v1
        with:
          registry: ghcr.io
-         username: ${{ secrets.github.actor }}
+         username: ${{ secrets.USERNAME_TOKEN }}
          password: ${{ secrets.ACTION_TOKEN }}
         
      - name: Docker push
