--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -17,10 +17,10 @@ jobs:
          echo github.repository : ${{ github.repository }}
          
      - name: Login GitHub
-       uses: docker/login-action@v1
+       uses: docker/login-action@v2
        with:
          registry: ghcr.io
-         username: ${{ secrets.USERNAME_TOKEN }}
+         username: ${{ github.actor }}
          password: ${{ secrets.ACTION_TOKEN }}
         
      - name: Docker push
