--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -25,4 +25,5 @@ jobs:
         
      - name: Docker push
        run: |
-         docker push ghcr.io/${{ github.repository }}:latest
+         echo "${${{ GITHUB_REPOSITORY_OWNER }},,}" >> ${{ GITHUB_REPOSITORY_OWNER }}
+         docker push ghcr.io/${{ GITHUB_REPOSITORY_OWNER }}:latest
