--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -24,7 +24,17 @@ jobs:
          registry: ghcr.io
          username: ${{ github.actor }}
          password: ${{ secrets.ACTION_TOKEN }}
-        
-     - name: Docker push
-       run: |
-         docker push ghcr.io/${{ github.repository }}:latest
+         
+     - name: Extract metadata (tags, labels) for Docker
+       id: meta
+       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
+       with:
+         images: ghcr.io/${{ github.repository }}
+
+     - name: Build and push Docker image
+       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
+       with:
+          context: .
+          push: true
+          tags: latest
+          labels: ${{ steps.meta.outputs.labels }}
