--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -11,30 +11,36 @@ jobs:
     runs-on: ubuntu-20.04
     
     steps:
-     - uses: actions/checkout@v3
-     - name: Docker image
-       run: |
-         docker build . --file Dockerfile.multi --tag my-image-name:wcg
-         echo github.actor : ${{ github.actor }}
-         echo github.repository : ${{ github.repository }}
+      - uses: actions/checkout@v3
+      - name: Docker image
+        run: |
+          docker build . --file Dockerfile.multi --tag my-image-name:wcg
+          echo github.actor : ${{ github.actor }}
+          echo github.repository : ${{ github.repository }}
          
-     - name: Login GitHub
-       uses: docker/login-action@v2
-       with:
-         registry: ghcr.io
-         username: ${{ github.actor }}
-         password: ${{ secrets.ACTION_TOKEN }}
-         
-     - name: Extract metadata (tags, labels) for Docker
-       id: meta
-       uses: docker/metadata-action@98669ae865ea3cffbcbaa878cf57c20bbf1c6c38
-       with:
-         images: ghcr.io/${{ github.repository }}
+      - name: Login GitHub
+        if: github.ref_type == 'tag'
+        uses: docker/login-action@v2
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.ACTION_TOKEN }}
+             
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: ghcr.io/${{ github.repository }}
+          flavor: latest=true
+          tags: |
+            type=ref,event=branch
+            type=ref,event=pr
+            type=semver,pattern={{version}}
 
-     - name: Build and push Docker image
-       uses: docker/build-push-action@ad44023a93711e3deb337508980b4b5e9bcdc5dc
-       with:
+      - name: Build and push
+        uses: docker/build-push-action@v3
+        with:
           context: .
-          push: true
-          tags: latest
+          push: ${{ github.ref_type == 'tag' }}
+          tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
