--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -19,7 +19,6 @@ jobs:
           echo github.repository : ${{ github.repository }}
          
       - name: Login GitHub
-        if: github.ref_type == 'tag'
         uses: docker/login-action@v2
         with:
           registry: ghcr.io
@@ -41,6 +40,6 @@ jobs:
         uses: docker/build-push-action@v3
         with:
           context: .
-          push: ${{ github.ref_type == 'tag' }}
+          push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
