--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -24,22 +24,20 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.ACTION_TOKEN }}
-             
+                 
       - name: Docker meta
-        id: meta
-        uses: docker/metadata-action@v4
+        id: docker_meta
+        uses: crazy-max/ghaction-docker-meta@v1
         with:
           images: ghcr.io/${{ github.repository }}
-          flavor: latest=true
-          tags: |
-            type=ref,event=branch
-            type=ref,event=pr
-            type=semver,pattern={{version}}
-
+          tag-custom: latest
+          tag-semver: |
+            {{raw}}
       - name: Build and push
-        uses: docker/build-push-action@v3
+        id: docker_build
+        uses: docker/build-push-action@v2
         with:
           context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
+          push: false
+          tags: ${{ steps.docker_meta.outputs.tags }}
+          labels: ${{ steps.docker_meta.outputs.labels }}
