--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -2,42 +2,41 @@ name: GitHub lab CI
 
 on: 
   push:
-    branches:
-      - 'main'
+    branches: ['main']
   workflow_dispatch:
    
 jobs:
   build:
     runs-on: ubuntu-20.04
+    permissions:
+      contents: read
+      packages: write
     
     steps:
       - uses: actions/checkout@v3
-      - name: Docker image
+      - name: Build image
         run: |
-          docker build . --file Dockerfile.multi --tag my-image-name:wcg
+          docker build . --file Dockerfile.multi --tag my-image-name:wcg --label "runnumber=${GITHUB_RUN_ID}"
           echo github.actor : ${{ github.actor }}
           echo github.repository : ${{ github.repository }}
-         
-      - name: Login GitHub
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.ACTION_TOKEN }}
-                 
-      - name: Docker meta
-        id: docker_meta
-        uses: crazy-max/ghaction-docker-meta@v1
-        with:
-          images: ghcr.io/${{ github.repository }}
-          tag-custom: latest
-          tag-semver: |
-            {{raw}}
-      - name: Build and push
-        id: docker_build
-        uses: docker/build-push-action@v2
-        with:
-          context: .
-          push: false
-          tags: ${{ steps.docker_meta.outputs.tags }}
-          labels: ${{ steps.docker_meta.outputs.labels }}
+          
+      - name: Log in to registry
+        # This is where you will update the personal access token to ACTION_TOKEN
+        run: echo "${{ secrets.ACTION_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
+        
+      - name: Push image
+        run: |
+          IMAGE_ID=ghcr.io/${{ github.repository_owner }}/wcg
+
+          # Change all uppercase to lowercase
+          IMAGE_ID=$(echo $IMAGE_ID | tr '[A-Z]' '[a-z]')
+          # Strip git ref prefix from version
+          VERSION=$(echo "${{ github.ref }}" | sed -e 's,.*/\(.*\),\1,')
+          # Strip "v" prefix from tag name
+          [[ "${{ github.ref }}" == "refs/tags/"* ]] && VERSION=$(echo $VERSION | sed -e 's/^v//')
+          # Use Docker `latest` tag convention
+          [ "$VERSION" == "master" ] && VERSION=latest
+          echo IMAGE_ID=$IMAGE_ID
+          echo VERSION=$VERSION
+          docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
+          docker push $IMAGE_ID:$VERSION
