--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -28,4 +28,5 @@ jobs:
         
       - name: Push image
         run: |
-          IMAGE_ID=ghcr.io/${{ github.repository_owner }}
+          docker push ghcr.io/${{ github.repository_owner }}:latest
+
