--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -28,5 +28,5 @@ jobs:
         
       - name: Push image
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}:latest
+          docker push ghcr.io/${{ github.repository_owner }}
 
