--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -3,9 +3,6 @@ name: GitHub lab CI
 on: 
   push:
     branches: ['main']
-    tags:
-      - v*
-      
   workflow_dispatch:
    
 jobs:
@@ -16,24 +13,20 @@ jobs:
       packages: write
     
     steps:
-      - uses: actions/checkout@v3
+      - name: Ckeckout repository
+        uses: actions/checkout@v3
+        
       - name: Build image
         run: |
-          docker build . --file Dockerfile.multi --tag my-image-name:wcg --label "runnumber=${GITHUB_RUN_ID}"
+          GITHUB=$(echo $GITHUB_REPOSITORY_OWNER)
+          docker build --tag wcg:latest --tag ghcr.io/$GITHUB/wcg:latest --tag ghcr.io/$GITHUB/wcg:${{ github.sha }} --file Dockerfile.multi .
           echo github.actor : ${{ github.actor }}
-          echo github.repository : ${{ github.repository }}
+          echo ${{ GITHUB_REPOSITORY_OWNER }}
           
-      - name: Log in to registry
-        run: echo "${{ secrets.ACTION_TOKEN }}" | docker login ghcr.io -u $ --password-stdin
-      
-      - name: Login GitHub
-        uses: docker/login-action@v2
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.ACTION_TOKEN }}
-        
       - name: Push image
         run: |
-          docker push ghcr.io/${{ github.repository_owner }}/wcg
-
+          OWNER=$(echo $GITHUB_REPOSITORY_OWNER)
+          echo ${{ secrets.ACTION_TOKEN }} | docker login ghcr.io -u $OWNER --password-stdin
+          docker push ghcr.io/$OWNER/wcg:latest
+          docker push ghcr.io/$OWNER/wcg:${{ github.sha }}
+          
