--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -18,7 +18,7 @@ jobs:
         run: |
           run: |
           cd ./11-github-actions
-          OWNER=$(echo $github.repository_owner | tr '[:upper:]' '[:lower:]')
+          OWNER=$(echo GITHUB_REPOSITORY_OWNER $ | tr '[:upper:]' '[:lower:]')
           docker build -t wcg:latest -t ghcr.io/$OWNER/wcg:latest -t ghcr.io/$OWNER/wcg:${{ github.sha }} -f ./Dockerfile.multi . 
           
       - name: Push image
