--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -15,8 +15,8 @@ jobs:
           repository: maxmax03/devops-hometasks
         
       - name: Build image
+        id: build
         run: |
-          run: |
           cd ./11-github-actions
           OWNER=$(echo GITHUB_REPOSITORY_OWNER $ | tr '[:upper:]' '[:lower:]')
           docker build -t wcg:latest -t ghcr.io/$OWNER/wcg:latest -t ghcr.io/$OWNER/wcg:${{ github.sha }} -f ./Dockerfile.multi . 
