--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -1,9 +1,9 @@
 name: GitHub lab CI
 
-on: 
+on:
   push:
   workflow_dispatch:
-   
+  
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,14 +11,13 @@ jobs:
     steps:
       - name: Ckeckout repository
         uses: actions/checkout@v3
-        with:
-          repository: maxmax03/devops-hometasks
         
       - name: Build image
         id: build
         run: |
-          OWNER=$(echo GITHUB_REPOSITORY_OWNER $ | tr '[:upper:]' '[:lower:]')
-          docker build -t wcg:latest -t ghcr.io/$OWNER/wcg:latest -t ghcr.io/$OWNER/wcg:${{ github.sha }} --file ./Dockerfile.multi .
+          cd ./11-github-actions
+          OWNER=$(echo $GITHUB_REPOSITORY_OWNER | tr '[:upper:]' '[:lower:]')
+          docker build -t wcg:latest -t ghcr.io/$OWNER/wcg:latest -t ghcr.io/$OWNER/wcg:${{ github.sha }} -f ./Dockerfile.multi . 
           
       - name: Push image
         run: |
@@ -26,4 +25,3 @@ jobs:
           echo ${{ secrets.ACTION_TOKEN }} | docker login ghcr.io -u $OWNER --password-stdin
           docker push ghcr.io/$OWNER/wcg:latest
           docker push ghcr.io/$OWNER/wcg:${{ github.sha }}
-          
