--- a/.github/workflows/lab.yaml
+++ b/.github/workflows/lab.yaml
@@ -2,15 +2,18 @@ name: GitHub lab CI
 
 on:
   push:
+    branches: ['main']
   workflow_dispatch:
   
 jobs:
   build:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
+    permissions:
+      contents: read
+      packages: write
     
     steps:
-      - name: Ckeckout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v3
         
       - name: Build image
         id: build
