--- a/09-docker/Vagrantfile
+++ b/09-docker/Vagrantfile
@@ -1,14 +1,15 @@
 Vagrant.configure("2") do |config|
     config.vm.box = "generic/debian11"
     config.vm.synced_folder  ".", "/vagrant", disabled: false
-    config.vm.network "private_network", ip: "192.168.33.40"
-    config.vm.hostname = "docker"
+    config.vm.network "private_network", ip: "192.168.33.33"
+    config.vm.hostname = "k8s"
+    config.vm.define "terraform"
+
     config.vm.provider "virtualbox" do |vb|
-        vb.memory = "2048"
-        vb.cpus = 2
-        vb.name   = "docker.vm"
-        # vb.memory = 4096
-        # vb.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
+        vb.memory = 5120
+        vb.cpus = 4
+        vb.name   = "terraform.vm"
+        vb.customize ["modifyvm", :id, "--clipboard", "bidirectional"]
         # vb.gui = true
     end
     config.vm.provision "shell", inline: <<-SHELL
@@ -16,7 +17,7 @@ Vagrant.configure("2") do |config|
         apt-get install -y ca-certificates curl gnupg lsb-release gnome-core gnome
         curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /usr/share/keyrings/docker-archive-keyring.gpg
         echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/docker-archive-keyring.gpg] https://download.docker.com/linux/debian \
-            $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+          $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
         apt-get update
         apt-get install -y docker-ce docker-ce-cli containerd.io
         usermod -aG docker vagrant
